# Meridian-Engine

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.sh  release.sh
.claude/skills/meridian-compute-driver-keeper/: SKILL.md
.claude/skills/meridian-crate-boundary-keeper/: SKILL.md
.claude/skills/meridian-engine-integration-keeper/: SKILL.md
.claude/skills/meridian-subsystem-core-keeper/: SKILL.md
.codex/skills/meridian-compute-driver-keeper/agents/: openai.yaml
.codex/skills/meridian-crate-boundary-keeper/agents/: openai.yaml
.codex/skills/meridian-data-oriented-ecs-keeper/: SKILL.md
.codex/skills/meridian-data-oriented-ecs-keeper/agents/: openai.yaml
.codex/skills/meridian-docs-guardian/: SKILL.md
.codex/skills/meridian-docs-guardian/agents/: openai.yaml
.codex/skills/meridian-engine-integration-keeper/agents/: openai.yaml
.codex/skills/meridian-gac-math-keeper/: SKILL.md
.codex/skills/meridian-gac-math-keeper/agents/: openai.yaml
.codex/skills/meridian-resource-lifetime-keeper/: SKILL.md
.codex/skills/meridian-resource-lifetime-keeper/agents/: openai.yaml
.codex/skills/meridian-subsystem-core-keeper/agents/: openai.yaml
crates/meridian-asset-core/: Cargo.toml
crates/meridian-asset-core/src/: compressed_audio.rs  lib.rs  streaming.rs
crates/meridian-asset-core/src/audio/: audio_streaming.rs  compressed_audio.rs  mod.rs  wav.rs
crates/meridian-asset-core/src/image/: bmp.rs  mod.rs  png_decoder.rs
crates/meridian-audio-core/: Cargo.toml
crates/meridian-audio-core/src/: lib.rs
crates/meridian-audio-core/src/effects/: binaural.rs  declicker.rs  dsp_graph.rs  gain.rs  low_pass.rs  medium.rs  mod.rs
crates/meridian-audio-driver/: Cargo.toml
crates/meridian-audio-driver/src/: lib.rs
crates/meridian-compute-core/: Cargo.toml
crates/meridian-compute-core/src/: lib.rs
crates/meridian-compute-driver/: Cargo.toml
crates/meridian-compute-driver/src/: lib.rs
crates/meridian-compute-runtime/: Cargo.toml
crates/meridian-compute-runtime/src/: lib.rs
crates/meridian-ecs-core/: Cargo.toml
crates/meridian-ecs-core/src/: lib.rs
crates/meridian-engine-core/: Cargo.toml
crates/meridian-engine-core/src/: lib.rs
crates/meridian-foundation/: Cargo.toml
crates/meridian-foundation/src/: crash_reporting.rs  lib.rs  logging.rs
crates/meridian-gac-compute/: Cargo.toml
crates/meridian-gac-compute/src/: fixed_wgsl.rs  lib.rs
crates/meridian-gac-core/: Cargo.toml
crates/meridian-gac-core/src/: fixed_ga.rs  float_ga.rs  generic.rs  lib.rs
crates/meridian-gpu-driver/: Cargo.toml
crates/meridian-gpu-driver/src/: lib.rs
crates/meridian-graphics-core/: Cargo.toml
crates/meridian-graphics-core/src/: bloom.rs  lib.rs  scene.rs  submission.rs
crates/meridian-graphics-driver/: Cargo.toml
crates/meridian-graphics-driver/src/: lib.rs
crates/meridian-memory-core/: Cargo.toml
crates/meridian-memory-core/src/: lib.rs
crates/meridian-numeric-core/: Cargo.toml
crates/meridian-numeric-core/src/: fixed.rs  float.rs  lib.rs
crates/meridian-physics-compute/: Cargo.toml
crates/meridian-physics-compute/src/: fixed.rs  float.rs  generic.rs  lib.rs
crates/meridian-physics-core/: Cargo.toml
crates/meridian-physics-core/src/: deterministic.rs  fixed.rs  float.rs  generic.rs  lib.rs
crates/meridian-physics-core/src/soft_body/: fixed_softbody.rs  float_softbody.rs  generic_softbody.rs  mod.rs
crates/meridian-physics-driver/: Cargo.toml
crates/meridian-physics-driver/src/: lib.rs
crates/meridian-platform-core/: Cargo.toml
crates/meridian-platform-core/src/: capabilities.rs  dynamic_library.rs  input.rs  lib.rs  time.rs  window.rs
crates/meridian-resource-core/: Cargo.toml
crates/meridian-resource-core/src/: lib.rs
crates/meridian-task-core/: Cargo.toml
crates/meridian-task-core/src/: lib.rs
docs/: architecture.md  dependency-rules.md  ecs-design.md  gac-design.md  graphics-design.md  memory-model.md  physics-design.md  roadmap.md  threading-model.md
docs/adr/: 001-geometric-algebra-as-spatial-model.md  002-handle-based-resources.md  003-no-global-managers.md  004-data-oriented-design.md  005-driver-core-separation.md  006-resource-core-separation.md  007-batch-transforms-via-compute.md  008-fixed-point-determinism.md  009-async-io-via-tokio.md  010-windowing-via-winit.md  011-shared-gpu-driver-crate.md  012-audio-output-via-cpal.md  013-compressed-audio-codecs.md  014-streaming-audio-decode.md
examples/: Cargo.toml
examples/assets/audio/: demo-music.opus
examples/examples/: audible_scene.rs  audio_formats.rs  audio_spatialization.rs  determinism_validation.rs  gac_validation.rs  graphics_validation.rs  headless_world.rs  hello_engine.rs  magic_figures.rs  music_sphere.rs  physic_figures.rs  runtime_loop.rs  soft_body_jiggle_deterministic.rs  soft_body_jiggle_float.rs  soft_body_rubber_balls.rs  spinning_cube.rs
examples/src/: fly_camera.rs  lib.rs  scene_base.rs
scripts/: check_dependency_rules.py  gh_release.sh
