[workspace]
resolver = "3"
members = ["crates/*", "examples"]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MPL-2.0"
repository = "https://github.com/F000NKKK/Meridian-Engine"

# Single source of truth for every internal crate's version + path. Member
# crates reference these as `meridian-foo = { workspace = true }` instead of
# repeating path/version — bump a version once here and it's correct both
# for local builds (path) and for `cargo publish` (version).
[workspace.dependencies]
meridian-foundation = { path = "crates/meridian-foundation", version = "0.7" }
meridian-numeric-core = { path = "crates/meridian-numeric-core", version = "0.8" }
meridian-gac-core = { path = "crates/meridian-gac-core", version = "0.12" }
meridian-memory-core = { path = "crates/meridian-memory-core", version = "0.8" }
meridian-resource-core = { path = "crates/meridian-resource-core", version = "0.8" }
meridian-task-core = { path = "crates/meridian-task-core", version = "0.7" }
meridian-platform-core = { path = "crates/meridian-platform-core", version = "0.11" }
meridian-gpu-driver = { path = "crates/meridian-gpu-driver", version = "0.5" }
meridian-compute-driver = { path = "crates/meridian-compute-driver", version = "0.15" }
meridian-compute-runtime = { path = "crates/meridian-compute-runtime", version = "0.17" }
meridian-gac-compute = { path = "crates/meridian-gac-compute", version = "0.20" }
meridian-asset-core = { path = "crates/meridian-asset-core", version = "0.11" }
meridian-ecs-core = { path = "crates/meridian-ecs-core", version = "0.14" }
meridian-graphics-driver = { path = "crates/meridian-graphics-driver", version = "0.14" }
meridian-audio-driver = { path = "crates/meridian-audio-driver", version = "0.11" }
meridian-graphics-core = { path = "crates/meridian-graphics-core", version = "0.22" }
meridian-physics-driver = { path = "crates/meridian-physics-driver", version = "0.9" }
meridian-physics-core = { path = "crates/meridian-physics-core", version = "0.20" }
meridian-physics-compute = { path = "crates/meridian-physics-compute", version = "0.1" }
meridian-audio-core = { path = "crates/meridian-audio-core", version = "0.18" }
meridian-engine-core = { path = "crates/meridian-engine-core", version = "0.24" }

# External dependencies shared by more than one crate go here too, same
# reasoning: one place to bump a version instead of drifting per-crate
# copies. `wgpu` is `graphics-driver`'s GPU backend — see docs/roadmap.md's
# "Not yet decided" wgpu entry. `tokio` is this workspace's async runtime:
# used wherever a crate has a genuine I/O operation (unbounded/externally-
# determined completion time — an OS/driver handshake, waiting on
# in-flight GPU work, eventually file/network I/O), not layered onto
# bounded-cost local work (allocation, validation, recording) that would
# gain nothing from being `async` — see `meridian-graphics-driver`'s
# module doc for the concrete first case (`Device::new`/`read_buffer`).
wgpu = "30.0.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }

# `winit` is `platform-core::Window`'s windowing backend — see
# docs/adr/010-windowing-via-winit.md. Pinned to the latest version whose
# `raw-window-handle` matches `wgpu`'s own (both currently 0.6.x), since
# that's what lets `Arc<winit::window::Window>` satisfy
# `wgpu::Surface` creation without `graphics-driver` depending on `winit`
# itself — see that ADR's "graphics-driver stays winit-agnostic" section.
winit = "0.30.13"

# `cpal` is `audio-driver`'s cross-platform audio output backend — the
# same class of decision as `wgpu` for GPU and `winit` for windowing:
# hand-writing FFI to ALSA/PulseAudio/WASAPI/CoreAudio would be a
# multi-month undertaking with three or more independent classes of
# platform bugs; cpal is to audio output what winit is to windowing.
cpal = "0.18"
crossbeam-channel = "0.5"

# Compressed-audio decoding for `asset-core` — the same class of decision
# as `cpal`/`winit`/`wgpu` (see docs/adr/013-compressed-audio-codecs.md):
# hand-rolling an MP3/Vorbis/FLAC/Opus decoder is a multi-month DSP
# undertaking per codec. `symphonia` is the pure-Rust ecosystem standard
# for MP3/OGG-Vorbis/FLAC; Opus has no mature pure-Rust decoder, so it
# uses the reference `libopus` through `symphonia-adapter-libopus`, which
# plugs libopus into the same symphonia decode pipeline (one codec
# registry for every compressed format). Formats are detected by leading
# magic bytes, never by file extension.
symphonia = { version = "0.6", default-features = false, features = ["mp3", "ogg", "vorbis", "flac"] }
symphonia-adapter-libopus = "0.3"

# PNG decoding for `asset-core` — the same class of decision as the audio
# codecs above: PNG's compressed data is DEFLATE (zlib), and hand-rolling
# a correct DEFLATE decompressor is squarely a "multi-month, several
# independent bug classes" undertaking, not the "small enough to own"
# class BMP/OBJ fall into. `png` (pure Rust, the decoder `image` itself
# uses) is the ecosystem-standard choice for exactly this format, without
# pulling in `image`'s much larger multi-format surface for a
# single-format need.
png = "0.18"

[profile.release]
lto = true
codegen-units = 1