[package]
name = "meridian-examples"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dev-dependencies]
meridian-engine-core = { workspace = true }
meridian-gac-core = { workspace = true }
meridian-ecs-core = { workspace = true }
meridian-memory-core = { workspace = true }
meridian-resource-core = { workspace = true }
meridian-task-core = { workspace = true }
meridian-platform-core = { workspace = true }
meridian-audio-core = { workspace = true }
meridian-graphics-core = { workspace = true }
meridian-physics-core = { workspace = true }

[[example]]
name = "hello_engine"
path = "examples/hello_engine.rs"

[[example]]
name = "gac_validation"
path = "examples/gac_validation.rs"

[[example]]
name = "headless_world"
path = "examples/headless_world.rs"

[[example]]
name = "audio_spatialization"
path = "examples/audio_spatialization.rs"

[[example]]
name = "graphics_validation"
path = "examples/graphics_validation.rs"

[[example]]
name = "runtime_loop"
path = "examples/runtime_loop.rs"
