[package]
name = "meridian-examples"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
meridian-engine-core = { workspace = true }
meridian-foundation = { workspace = true, features = ["file-logging"] }
meridian-gac-core = { workspace = true }
meridian-ecs-core = { workspace = true }
meridian-memory-core = { workspace = true }
meridian-resource-core = { workspace = true }
meridian-task-core = { workspace = true }
meridian-platform-core = { workspace = true }
meridian-audio-core = { workspace = true }
meridian-asset-core = { workspace = true }
meridian-graphics-core = { workspace = true }
meridian-graphics-driver = { workspace = true }
meridian-physics-core = { workspace = true }
meridian-physics-compute = { workspace = true }
meridian-compute-runtime = { workspace = true }
meridian-numeric-core = { workspace = true }
meridian-gpu-driver.workspace = true

tokio = { workspace = true }

[[example]]
name = "magic_figures"
path = "examples/magic_figures.rs"

[[example]]
name = "physic_figures"
path = "examples/physic_figures.rs"
