[package]
name = "meridian-audio-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Spatial audio built on the GAC: mixer, DSP graph, listener and emitter frames."

[dependencies]
meridian-gac-core = { path = "../meridian-gac-core", version = "0.1.0" }
meridian-audio-driver = { path = "../meridian-audio-driver", version = "0.1.0" }
