[package]
name = "meridian-audio-core"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Spatial audio built on the GAC: mixer, DSP graph, listener and emitter frames."

[dependencies]
meridian-gac-core = { workspace = true }
meridian-audio-driver = { workspace = true }
meridian-resource-core = { workspace = true }
