[package]
name = "meridian-audio-driver"
version = "0.10.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level audio device abstraction: output streams, buffers and platform audio backends."

[dependencies]
meridian-foundation = { workspace = true }
meridian-platform-core = { workspace = true }
cpal = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
