[package]
name = "meridian-compute-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared compute scheduling and buffer management for subsystems that need CPU SIMD / GPU compute: physics, rendering, and future animation/particles/AI cores."

[dependencies]
meridian-compute-driver = { workspace = true }
meridian-task-core = { workspace = true }
meridian-memory-core = { workspace = true }
meridian-gac-core = { workspace = true }
