[package]
name = "meridian-compute-runtime"
version = "0.16.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Compute dispatch runtime: device/context, buffers, and the ComputeKernel interface domain crates (gac-compute, future particle-compute/physics-compute/...) implement against. Owns no algorithms of its own."

[dependencies]
meridian-compute-driver = { workspace = true }
meridian-task-core = { workspace = true }
meridian-memory-core = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
meridian-gpu-driver.workspace = true
