[package]
name = "meridian-engine-core"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime: frame scheduler, event system, subsystem manager; ties every other crate into the main loop."

[dependencies]
meridian-gac-core = { workspace = true }
meridian-memory-core = { workspace = true }
meridian-task-core = { workspace = true }
meridian-platform-core = { workspace = true }
meridian-ecs-core = { workspace = true }
meridian-graphics-core = { workspace = true }
meridian-physics-core = { workspace = true }
meridian-audio-core = { workspace = true }
meridian-asset-core = { workspace = true }
meridian-compute-runtime = { workspace = true }
