[package]
name = "meridian-gac-compute"
version = "0.10.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Batch execution kernels for GAC transforms (Motor3) on CPU-SIMD / GPU compute. The adapter between the pure math in gac-core and the dispatch runtime in compute-runtime — neither depends on the other."

[dependencies]
meridian-gac-core = { workspace = true }
meridian-compute-runtime = { workspace = true }

[dev-dependencies]
# Test-only: constructs Fixed values for FixedMotor3 test fixtures. Not a
# real dependency edge — see scripts/check_dependency_rules.py's
# [dependencies]-only scan.
meridian-numeric-core = { workspace = true }
