[package]
name = "meridian-gac-core"
version = "0.12.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Geometric Algebra Core — vectors, bivectors, multivectors, rotors and motors; the shared spatial math foundation for every other subsystem."

[dependencies]
meridian-numeric-core = { workspace = true }
