[package]
name = "meridian-graphics-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level rendering: render graph, scene extraction, visibility/culling, lighting, materials, camera and post-processing."

[dependencies]
meridian-gac-core = { path = "../meridian-gac-core", version = "0.1.0" }
meridian-memory-core = { path = "../meridian-memory-core", version = "0.1.0" }
meridian-ecs-core = { path = "../meridian-ecs-core", version = "0.1.0" }
meridian-asset-core = { path = "../meridian-asset-core", version = "0.1.0" }
meridian-graphics-driver = { path = "../meridian-graphics-driver", version = "0.1.0" }
