[package]
name = "meridian-graphics-core"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level rendering: render graph, scene extraction, visibility/culling, lighting, materials, camera and post-processing."

[dependencies]
meridian-gac-core = { workspace = true }
meridian-gac-compute = { workspace = true }
meridian-memory-core = { workspace = true }
meridian-ecs-core = { workspace = true }
meridian-asset-core = { workspace = true }
meridian-graphics-driver = { workspace = true }
meridian-compute-runtime = { workspace = true }
meridian-resource-core = { workspace = true }
