[package]
name = "meridian-graphics-driver"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level GPU abstraction (device, command queues, buffers, textures, shaders, pipelines, synchronization). Knows nothing about scenes or materials."

[dependencies]
meridian-platform-core = { workspace = true }
pollster = "1.0.1"
wgpu = "30.0.0"
