[package]
name = "meridian-graphics-driver"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level GPU abstraction (device, command queues, buffers, textures, shaders, pipelines, synchronization). Knows nothing about scenes or materials."

[dependencies]
meridian-platform-core = { workspace = true }
tokio = { workspace = true }
wgpu = { workspace = true }
