[package]
name = "meridian-memory-core"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Frame/persistent arenas, resource pools and generational handles; minimizes dynamic allocation across the engine."

[dependencies]
