[package]
name = "meridian-physics-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rigid body dynamics built on the GAC: broad/narrow phase collision, constraint solving and integration."

[dependencies]
meridian-gac-core = { workspace = true }
meridian-ecs-core = { workspace = true }
meridian-compute-core = { workspace = true }
meridian-physics-driver = { workspace = true }
