[package]
name = "meridian-platform-core"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OS abstraction: window, input, filesystem, time, threading and dynamic library loading."

[dependencies]
meridian-foundation = { workspace = true }
winit = { workspace = true }
