[package]
name = "meridian-task-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Job graph scheduler: worker threads, dependency tracking and work stealing for parallel frame execution."

[dependencies]
